--- a/realmfit/build.gradle
+++ b/realmfit/build.gradle
@@ -52,7 +52,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-
+    compile 'com.android.support.test.espresso:espresso-idling-resource:2.2.2'
     compile 'com.bignerdranch.android:expandablerecyclerview:3.0.0-RC1'
 
     compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
