--- a/realmfit/src/main/AndroidManifest.xml
+++ b/realmfit/src/main/AndroidManifest.xml
@@ -11,6 +11,10 @@
         android:theme="@style/AppTheme"
         android:name=".App">
 
+        <activity android:name=".ToJsonActivity">
+
+        </activity>
+
         <activity android:name=".DummyActivity">
         </activity>
 
